# PopCornMiniSite

./: .env.development  .env.example  .gitignore  404.html  asset-manifest.json  codereview-report.md  index.html  integration-report.md  package-lock.json  package.json  security-report.md  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
tg-harvest/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
tg-harvest/.github/: pull_request_template.md
tg-harvest/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tg-harvest/.github/workflows/: ci.yml
tg-harvest/.streamlit/: config.toml
tg-harvest/src/tg_harvest/: __init__.py  __main__.py
tg-harvest/tests/: conftest.py
tg-harvest/tests/test_analytics/: test_stats.py  test_stats_edge_cases.py  test_thread_stats.py
tg-harvest/tests/test_cli/: test_app.py  test_export.py  test_formatters.py  test_parse_fields.py  test_parse_queue.py
tg-harvest/tests/test_config/: test_constants.py  test_date_utils.py  test_logging.py  test_rate_limiter.py  test_settings.py
tg-harvest/tests/test_exporters/: test_csv_exporter.py  test_exporter_edge_cases.py  test_field_selection.py  test_file_suffix.py  test_html_exporter.py  test_json_exporter.py  test_splitter.py  test_xlsx_exporter.py
tg-harvest/tests/test_integration/: test_export_pipeline.py  test_imports.py  test_project_structure.py
tg-harvest/tests/test_models/: test_channel.py  test_media.py  test_message.py  test_parse_result.py  test_reaction.py  test_sender_info.py
tg-harvest/tests/test_parsers/: test_channel_parser.py  test_channel_parser_extended.py  test_media_downloader.py  test_media_parser.py  test_media_parser_edge_cases.py  test_message_parser.py  test_message_parser_edge_cases.py  test_sender_enricher.py
tg-harvest/tests/test_search/: test_engine.py  test_engine_edge_cases.py  (+1 more)
(+639 files in other folders)
