[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-harvest"
version = "1.2.7"
description = "Telegram data harvester via MTProto API — channels, groups, bots, private chats"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "klivak"}]
keywords = [
    "telegram", "parser", "scraper", "telethon", "telegram-api",
    "telegram-channel", "telegram-export", "telegram-analytics",
    "telegram-backup", "telegram-archive", "osint", "data-extraction",
    "social-media", "content-analysis", "telegram-monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.42",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "aiofiles>=23.0",
    "cryptg>=0.4",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "streamlit-js-eval>=0.1",
    "plotly>=5.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/klivak/tg-harvest"
Repository = "https://github.com/klivak/tg-harvest"
Changelog = "https://github.com/klivak/tg-harvest/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/klivak/tg-harvest/issues"

[project.scripts]
tg-harvest = "tg_harvest.cli.app:cli"
tg-harvest-web = "tg_harvest.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tg_harvest = ["web/locales/*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
